config project to run whole environment with test settings